New Expand & Collapse All (applied to categories) actions in the context menu.
git-svn-id: http://fbug.googlecode.com/svn@2031 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -22,3 +22,5 @@ test.cmd.Stop=Stop
 test.cmd.tip.Stop=Stop Current Test
 test.cmd.refresh=Refresh
 test.cmd.tip.Stop=Refresh Test List
+test.cmd.Expand_All=Expand All
+test.cmd.Collapse_All=Collapse All
