--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -24,3 +24,5 @@ test.cmd.refresh=Refresh
 test.cmd.tip.Stop=Refresh Test List
 test.cmd.Expand_All=Expand All
 test.cmd.Collapse_All=Collapse All
+test.cmd.Copy_All_Errors=Copy All Errors
+test.cmd.Copy_Errors=Copy Errors
