Properly label all localization strings + remove propriatery $FB_STR method and use only Firebug's $STR from lib.
git-svn-id: http://fbug.googlecode.com/svn@2252 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -1,28 +1,28 @@
-fireunit.panel.Test=Test
-fireunit.tab.Stack=Test Location
-fireunit.tab.Compare=Compare
-fireunit.title.Expected=Expected Result
-fireunit.title.Result=Actual Result
-fireunit.title.Difference=Difference
-fireunit.switch.view_source=view source
-fireunit.switch.pretty_print=pretty print
-fireunit.option.Passing_Tests=Passing Tests
-fireunit.option.Failing_Tests=Failing Tests
-fireunit.option.Enable_Privileges=Enable Privileges
-fireunit.item.View_Source=View Source
-fireunit.item.Copy=Copy
-fireunit.item.Copy_All=Copy All
-fireunit.test.Line=Line
-fireunit.label.Pass=Pass
-fireunit.label.Fail=Fail
-fireunit.label.Timeout=Timeout
-test.cmd.Run_All=Run All
-test.cmd.tip.Run_All_Tests=Run All Tests
-test.cmd.Stop=Stop
-test.cmd.tip.Stop=Stop Current Test
-test.cmd.refresh=Refresh
-test.cmd.tip.Stop=Refresh Test List
-test.cmd.Expand_All=Expand All
-test.cmd.Collapse_All=Collapse All
-test.cmd.Copy_All_Errors=Copy All Errors
-test.cmd.Copy_Errors=Copy Errors
+fbtest.panel.Test=Test
+fbtest.tab.Stack=Test Location
+fbtest.tab.Compare=Compare
+fbtest.title.Expected=Expected Result
+fbtest.title.Result=Actual Result
+fbtest.title.Difference=Difference
+fbtest.switch.view_source=view source
+fbtest.switch.pretty_print=pretty print
+fbtest.option.Passing=Passing
+fbtest.option.Failing=Failing
+fbtest.option.Enable_Privileges=Enable Privileges
+fbtest.item.View_Source=View Source
+fbtest.item.Copy=Copy
+fbtest.item.Copy_All=Copy All
+fbtest.test.Line=Line
+fbtest.label.Pass=Pass
+fbtest.label.Fail=Fail
+fbtest.label.Timeout=Timeout
+fbtest.cmd.Run_All=Run All
+fbtest.cmd.tip.Run_All_Tests=Run All Tests
+fbtest.cmd.Stop=Stop
+fbtest.cmd.tip.Stop=Stop Current Test
+fbtest.cmd.refresh=Refresh
+fbtest.cmd.tip.Stop=Refresh Test List
+fbtest.cmd.Expand_All=Expand All
+fbtest.cmd.Collapse_All=Collapse All
+fbtest.cmd.Copy_All_Errors=Copy All Errors
+fbtest.cmd.Copy_Errors=Copy Errors
