FBTest introduce a new category attribute (allowed values: "passes" (the default value) and "fails"). Tests with this attribute are grayed out in the test console UI and results from these tests are displayed separately.
git-svn-id: http://fbug.googlecode.com/svn@2253 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -6,15 +6,15 @@ fbtest.title.Result=Actual Result
 fbtest.title.Difference=Difference
 fbtest.switch.view_source=view source
 fbtest.switch.pretty_print=pretty print
-fbtest.option.Passing=Passing
-fbtest.option.Failing=Failing
-fbtest.option.Enable_Privileges=Enable Privileges
 fbtest.item.View_Source=View Source
 fbtest.item.Copy=Copy
 fbtest.item.Copy_All=Copy All
 fbtest.test.Line=Line
 fbtest.label.Pass=Pass
 fbtest.label.Fail=Fail
+fbtest.label.Passing=Passing
+fbtest.label.Failing=Failing
+fbtest.label.Todo=Todo
 fbtest.label.Timeout=Timeout
 fbtest.cmd.Run_All=Run All
 fbtest.cmd.tip.Run_All_Tests=Run All Tests
