Fix name for localized string.
git-svn-id: http://fbug.googlecode.com/svn@2263 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -20,7 +20,7 @@ fbtest.cmd.Run_All=Run All
 fbtest.cmd.tip.Run_All_Tests=Run All Tests
 fbtest.cmd.Stop=Stop
 fbtest.cmd.tip.Stop=Stop Current Test
-fbtest.cmd.refresh=Refresh
+fbtest.cmd.Refresh=Refresh
 fbtest.cmd.tip.Stop=Refresh Test List
 fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
