Make "Browse for a new test suite" button more obvious + avoid exception within internationalize method.
git-svn-id: http://fbug.googlecode.com/svn@2271 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -26,3 +26,4 @@ fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
 fbtest.cmd.Copy_All_Errors=Copy All Errors
 fbtest.cmd.Copy_Errors=Copy Errors
+fbtest.cmd.tip.Browser_For_Test_List=Browse For a Test Suite...
