implement halt on fail
git-svn-id: http://fbug.googlecode.com/svn@2336 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -21,7 +21,9 @@ fbtest.cmd.tip.Run_All_Tests=Run All Tests
 fbtest.cmd.Stop=Stop
 fbtest.cmd.tip.Stop=Stop Current Test
 fbtest.cmd.Refresh=Refresh
-fbtest.cmd.tip.Stop=Refresh Test List
+fbtest.cmd.tip.Refresh=Refresh Test List
+fbtest.cmd.haltOnFailedTest=Fail Halt
+fbtest.cmd.tip.haltOnFailedTest=Halt into debugger on test failure
 fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
 fbtest.cmd.Copy_All_Errors=Copy All Errors
