Firediff: Initial Diff Monitor Implementation
git-svn-id: http://fbug.googlecode.com/svn@2379 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.1/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.1/locale/en-US/firediff.properties
@@ -1,1 +1,18 @@
 Panel-previous=Previous
+
+title.diffMonitor = Diff Monitor
+
+summary.DOMInserted = DOM Node Inserted
+summary.DOMRemoved = DOM Node Removed
+summary.DOMAttrChanged = Attribute Changed
+summary.DOMAttrAddition = Attribute Added
+summary.DOMAttrRemoval = Attribute Removed
+summary.DOMCharDataModified = DOM Character Data Changed
+summary.CSSSetProperty = CSS Set Property
+summary.CSSRemoveProperty = CSS Remove Property
+
+option.showAppChanges = Show App Changes
+option.showFirebugChanges = Show Firebug Changes
+
+source.firebug = Firebug Change
+source.application = Application Change
