UI Style Tweaks
git-svn-id: http://fbug.googlecode.com/svn@2444 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.1/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.1/locale/en-US/firediff.properties
@@ -1,6 +1,6 @@
 Panel-previous=Previous
 
-title.diffMonitor = Diff Monitor
+title.diffMonitor = Changes
 
 summary.DOMInserted = DOM Node Inserted
 summary.DOMRemoved = DOM Node Removed
