--- a/diff/branches/firediff0.1/TODO.txt
+++ b/diff/branches/firediff0.1/TODO.txt
@@ -1,14 +1,11 @@
 The following are items that need further work:
-- Integration with the Firebug Activation model
 - Data Model:
  - Handle diffs for the Firebug free edit modes
-- Filter all background changes made by Firebug (i.e. insertion of highlight element styles)
+- CSS Changes merged with editor changes due to "race" condition
 - Diff Monitor
  - Search
- - CSS Links
+ - CSS Rep Links
 - Snapshot Panel
 - Unified Diff Panel
 - Testing
- - Automated Tests
- - CSS Tests
- - Firebug DOM Change Tests
+ - Automated Tests to replace manual
