Graceful error failure for the installed on Firebug 1.3 case.
git-svn-id: http://fbug.googlecode.com/svn@2583 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.1/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.1/locale/en-US/firediff.properties
@@ -2,6 +2,8 @@ Panel-previous=Previous
 
 title.diffMonitor = Changes
 
+warning.firebugVersion = Firediff requires Firebug version 1.4 or higher.
+
 summary.DOMInserted = DOM Node Inserted
 summary.DOMRemoved = DOM Node Removed
 summary.DOMAttrChanged = Attribute Changed
