Initial rework of the all changes panel -> snapshot view.
Right click on an element in the change log should now display a snapshot in time of the DOM.

CSS support to follow.

git-svn-id: http://fbug.googlecode.com/svn@2621 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.2/locale/en-US/firediff.properties
@@ -1,7 +1,9 @@
 Panel-previous=Previous
 
 title.diffMonitor = Changes
-title.allChanges = All Changes
+
+page.ChangeLog = Change Log
+page.Snapshot = Snapshot
 
 warning.firebugVersion = Firediff requires Firebug version 1.4 or higher.
 
@@ -16,6 +18,8 @@ summary.CSSRemoveProperty = CSS Remove Property
 
 option.showAppChanges = Show App Changes
 option.showFirebugChanges = Show Firebug Changes
+
+menu.ChangeSnapshot = Show Snapshot
 
 source.firebug = Firebug Change
 source.application = Application Change
