Refactor the snapshot rep into two classes, DOM and CSS.
The CSS snapshot functionality does not currently work.

git-svn-id: http://fbug.googlecode.com/svn@2735 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.2/locale/en-US/firediff.properties
@@ -3,7 +3,8 @@ Panel-previous=Previous
 title.diffMonitor = Changes
 
 page.ChangeLog = Change Log
-page.Snapshot = Snapshot
+page.DOMSnapshot = DOM Snapshot
+page.CSSSnapshot = CSS Snapshot
 
 warning.firebugVersion = Firediff requires Firebug version 1.4 or higher.
 
