Improve the way how compared strings are displayed within the FBTest console. Apart from "view source" and "pretty print" there is also "escaped" view. All these three views alternate as the user clicks on the switch link.
git-svn-id: http://fbug.googlecode.com/svn@2738 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -6,6 +6,7 @@ fbtest.title.Result=Actual Result
 fbtest.title.Difference=Difference
 fbtest.switch.view_source=view source
 fbtest.switch.pretty_print=pretty print
+fbtest.switch.escaped=escaped
 fbtest.item.View_Source=View Source
 fbtest.item.Copy=Copy
 fbtest.item.Copy_All=Copy All
