--- a/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.4/locale/en-US/fbtest.properties
@@ -28,5 +28,5 @@ fbtest.cmd.tip.haltOnFailedTest=Halt into debugger on test failure
 fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
 fbtest.cmd.Copy_All_Errors=Copy All Errors
-fbtest.cmd.Copy_Errors=Copy Errors
+fbtest.cmd.Copy_Errors=Copy Errors From This Test
 fbtest.cmd.tip.Browser_For_Test_List=Browse For a Test Suite...
