CSS Insert + Remove Rule support
git-svn-id: http://fbug.googlecode.com/svn@3061 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/locale/en-US/firediff.properties
+++ b/diff/branches/firediff0.2/locale/en-US/firediff.properties
@@ -14,6 +14,8 @@ summary.DOMAttrChanged = Attribute Changed
 summary.DOMAttrAddition = Attribute Added
 summary.DOMAttrRemoval = Attribute Removed
 summary.DOMCharDataModified = DOM Character Data Changed
+summary.CSSInsertRule = CSS Set Rule
+summary.CSSRemoveRule = CSS Remove Rule
 summary.CSSSetProperty = CSS Set Property
 summary.CSSRemoveProperty = CSS Remove Property
 
