Use text arrows rather than words for snapshot navigation buttons
git-svn-id: http://fbug.googlecode.com/svn@3233 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/locale/en-US/firediff.dtd
+++ b/diff/branches/firediff0.2/locale/en-US/firediff.dtd
@@ -1,2 +1,2 @@
-<!ENTITY firediff.NextChange "Next Change">
-<!ENTITY firediff.PrevChange "Prev Change">
+<!ENTITY firediff.NextChange "&gt;">
+<!ENTITY firediff.PrevChange "&lt;">
