--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -29,5 +29,6 @@ fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
 fbtest.cmd.Copy_All_Errors=Copy All Errors
 fbtest.cmd.Copy_Errors=Copy Errors From This Test
-fbtest.cmd.tip.Browser_For_Test_List=Browse For a Test Suite...
+fbtest.cmd.tip.Browse_For_Test_List=Browse For a Test Suite...
 fbtest.cmd.Open_Test_Page=Open Test Page
+firebug.shortcut.openTestConsole.label=Open Test Console
