Issue 1908: FBTest API should support a failed due to exception method
git-svn-id: http://fbug.googlecode.com/svn@3583 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -1,6 +1,7 @@
 fbtest.panel.Test=Test
 fbtest.tab.Stack=Test Location
 fbtest.tab.Compare=Compare
+fbtest.tab.Exception=Exception
 fbtest.title.Expected=Expected Result
 fbtest.title.Result=Actual Result
 fbtest.title.Difference=Difference
