Belated release notes for 0.2
git-svn-id: http://fbug.googlecode.com/svn@3609 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/release_notes.txt
+++ b/diff/branches/firediff0.2/release_notes.txt
@@ -1,3 +1,11 @@
+6/29/200 - 0.2
+
+Changes:
+- CSS Snapshot implementation
+- HTML Snapshot implementation
+
+----
+
 4/23/2009 - 0.1a2
 Bug fix release
 
