Updated documentation for version 0.2.1
git-svn-id: http://fbug.googlecode.com/svn@3620 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/docs/release_notes.txt
+++ b/diff/branches/firediff0.2/docs/release_notes.txt
@@ -1,4 +1,13 @@
-6/29/200 - 0.2
+7/19/2009 - 0.2.1
+
+Changes:
+- Rewrite text diff engine
+- Fix extension compatibility issue due to namespace conflicts
+- Snapshot bug fixes
+
+----
+
+6/29/2009 - 0.2
 
 Changes:
 - CSS Snapshot implementation
