--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -33,3 +33,5 @@ fbtest.cmd.Copy_Errors=Copy Errors From This Test
 fbtest.cmd.tip.Browse_For_Test_List=Browse For a Test Suite...
 fbtest.cmd.Open_Test_Page=Open Test Page
 firebug.shortcut.openTestConsole.label=Open Test Console
+fbtest.urlbar.Test_List=Test List
+fbtest.urlbar.Test_Server=Test Server
