On By Default -> Activate By Default
git-svn-id: http://fbug.googlecode.com/svn@4019 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/firestarter/branches/firestarter0.1/chrome/locale/en-US/fireStarter.properties
+++ b/firestarter/branches/firestarter0.1/chrome/locale/en-US/fireStarter.properties
@@ -1,2 +1,2 @@
 fs.firebug.menu.Log_Activation_List=Log Activation List
-fs.firebug.menu.On_By_Default=On By Default
+fs.firebug.menu.On_By_Default=Activate By Default
