--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -33,5 +33,9 @@ fbtest.cmd.Copy_Errors=Copy Errors From This Test
 fbtest.cmd.tip.Browse_For_Test_List=Browse For a Test Suite...
 fbtest.cmd.Open_Test_Page=Open Test Page
 firebug.shortcut.openTestConsole.label=Open Test Console
-fbtest.urlbar.Test_List=Test List
-fbtest.urlbar.Test_Server=Test Server
+fbtest.urlbar.label.Test_List=Test List:
+fbtest.urlbar.label.Test_Cases=Test Cases:
+fbtest.urlbar.label.Test_Drivers=Test Drivers:
+fbtest.urlbar.name.Test_List_URL_Bar=Test List URL Bar
+fbtest.urlbar.name.Test_Cases_URL_Bar=Test Cases URL Bar
+fbtest.urlbar.name.Test_Drivers_URL_Bar=Test Drivers URL Bar
