Localize missing strings.
git-svn-id: http://fbug.googlecode.com/svn@4052 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -39,3 +39,7 @@ fbtest.urlbar.label.Test_Drivers=Test Drivers:
 fbtest.urlbar.name.Test_List_URL_Bar=Test List URL Bar
 fbtest.urlbar.name.Test_Cases_URL_Bar=Test Cases URL Bar
 fbtest.urlbar.name.Test_Drivers_URL_Bar=Test Drivers URL Bar
+fbtest.urlbar.tooltip.Test_List_URL=URL of the Test List file
+fbtest.urlbar.tooltip.Test_Cases_URL=URL of the root directory with Test Cases
+fbtest.urlbar.tooltip.Test_Drivers_URL=URL of the root directory with Test Drivers
+
