Firediff: Revert Change(s)
git-svn-id: http://fbug.googlecode.com/svn@4246 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff1.0/locale/en-US/firediff.properties
+++ b/diff/branches/firediff1.0/locale/en-US/firediff.properties
@@ -23,6 +23,12 @@ option.showAppChanges = Show App Changes
 option.showFirebugChanges = Show Firebug Changes
 
 menu.ChangeSnapshot = Show Snapshot
+menu.RevertAllChanges = Revert to Prior State
+menu.RevertChange = Revert Change
 
 source.firebug = Firebug Change
 source.application = Application Change
+
+prompt.title.MultipleRevert = Multiple Reverts
+prompt.text.MultipleRevert = Reverting this change requires at least one future change to be reverted. Would you like to continue the revert?
+prompt.dontAskAgain = Don't ask again.
