--- a/diff/branches/firediff1.0/docs/TODO.txt
+++ b/diff/branches/firediff1.0/docs/TODO.txt
@@ -8,4 +8,5 @@ The following are items that need further work:
  - Search
  - CSS Rep Links
 - Unified Diff Panel
-- Examine Undo/Redo functionality
+ - CSS and DOM formatter
+- Manual test for revert UI
