Preliminary support for export options (e.g. compressing) + support for localization.
git-svn-id: http://fbug.googlecode.com/svn@4332 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/netexport/branches/netexport0.7/chrome/locale/en-US/netExport.properties
+++ b/netexport/branches/netexport0.7/chrome/locale/en-US/netExport.properties
@@ -1,1 +1,6 @@
-Nothing_to_export=Nothing to export
+netexport.message.Nothing_to_export=Nothing to export
+netexport.button.label.Export=Export
+netexport.button.tooltip.Export_HTTP_Tracing=Export HTTP Tracing
+netexport.menu.tooltip.Export_Options=Export Options
+netexport.menu.label.Compress=Compress
+netexport.menu.tooltip.Compress_Exported_Data=Compress Exported Data
