--- a/diff/branches/firediff1.0/locale/en-US/firediff.properties
+++ b/diff/branches/firediff1.0/locale/en-US/firediff.properties
@@ -23,6 +23,9 @@ option.showAppChanges = Show App Changes
 option.showFirebugChanges = Show Firebug Changes
 
 menu.ChangeSnapshot = Show Snapshot
+menu.SaveSnapshot = Save Snapshot
+menu.SaveDiff = Save Diff
+menu.ChangeSnapshot = Show Snapshot
 menu.RevertAllChanges = Revert to Prior State
 menu.RevertChange = Revert Change
 
@@ -32,3 +35,8 @@ source.application = Application Change
 prompt.title.MultipleRevert = Multiple Reverts
 prompt.text.MultipleRevert = Reverting this change requires at least one future change to be reverted. Would you like to continue the revert?
 prompt.dontAskAgain = Don't ask again.
+prompt.cssFiles = CSS Files
+prompt.diffFiles = Diff Files
+
+diff.baseFile = (Base File)
+diff.snapshot = (Snapshot)
