--- a/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
+++ b/fbtest/branches/fbtest1.5/locale/en-US/fbtest.properties
@@ -26,6 +26,8 @@ fbtest.cmd.Refresh=Refresh
 fbtest.cmd.tip.Refresh=Refresh Test List
 fbtest.cmd.haltOnFailedTest=Fail Halt
 fbtest.cmd.tip.haltOnFailedTest=Halt into debugger on test failure
+fbtest.cmd.noTestTimeout=No Timeout
+fbtest.cmd.tip.noTestTimeout=Turn off the Test Timeout for Debugging
 fbtest.cmd.Expand_All=Expand All
 fbtest.cmd.Collapse_All=Collapse All
 fbtest.cmd.Copy_All_Errors=Copy All Errors
