Native Mozilla HTML formatter.
git-svn-id: http://fbug.googlecode.com/svn@4931 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/extensions/fireformat/branches/fireformat1.0/locale/en-US/fireformat.properties
+++ b/extensions/fireformat/branches/fireformat1.0/locale/en-US/fireformat.properties
@@ -1,2 +1,3 @@
 FireformatCSSFormatter = Fireformat CSS Formatter
 FireformatHTMLFormatter = Fireformat HTML Formatter
+MozillaHTMLFormatter = Mozilla HTML Formatter
